Įvesta dalis pirmos ir antros paskaitos XeLaTeX formatu.

--- a/paskaita_01.tex
+++ b/paskaita_01.tex
@@ -1,22 +1,27 @@
 \chapter{Įžanga}
 
-Čia turėtų būti kažkoks prasmingas tekstas.
+\section{Vertinimas}
 
-\begin{defn}[Apibrėžimo pavyzdys]
-  Čia turėtų būti apibrėžimas.
-\end{defn}
-
-\begin{exmp}[Pavyzdys]
-  Čia turėtų būti pavyzdys.
-\end{exmp}
+Galutinis pažymys sudaromas susumavus visus taškus:
+\begin{itemize}
+  \item kontrolinis – 10 taškų;
+  \item egzaminas – 20 taškų ir
+  \item papildoma užduotis – 4 taškai.
+\end{itemize}
 
 \begin{note}
-  Pastabos pavyzdys.
+  Egzamine gali būti klausimai iš viso kurso.
 \end{note}
 
-\begin{prop}
-  Teiginio pavyzdys.
-  \begin{proof}
-    Teiginio įrodymas.
-  \end{proof}
-\end{prop}
+\section{Temos}
+
+Kurso metu nagrinėjamos temos:
+\begin{enumerate}
+  \item Funkcijos riba ir tolydumas.
+  \item Funkcijos išvestinė (Teiloro formulė, funkcijos tyrimas, 
+    išvestinės apibrėžimas).
+  \item Apibrėžtinis integralas (Rymano, Lebego, nelabai konkretaus
+    pavadinimo integralai).
+  \item Netiesioginis integralas (integravimo kintamojo pakeitimo formulė,
+    integravimo dalimis formulė, Niutono-Leibnico formulė.)
+\end{enumerate}
