--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,8 @@
 
 \defaultfontfeatures{Mapping=tex-text}
 
+% Aibių žymėjimai.
+\newcommand\RSET{\mathop{\mathbb{R}}}
 
 % Apibrėžimai, teiginiai, pastabos.
 \swapnumbers
@@ -45,6 +47,7 @@ Matematinės analizės paskaitų konspektas}
 \maketitle
 \bigskip
 \tableofcontents
-\input{paskaita_01.tex}
+\input{paskaita_01.tex}                 % Įžanginė.
+\input{paskaita_02.tex}                 % Funkcijos riba.
 
 \end{document}
