Pridėtas pavyzdžių failas.

--- a/main.tex
+++ b/main.tex
@@ -49,5 +49,6 @@ Matematinės analizės paskaitų konspektas}
 \tableofcontents
 \input{paskaita_01.tex}                 % Įžanginė.
 \input{paskaita_02.tex}                 % Funkcijos riba.
+\input{pvz.tex}                         % Įvairus TeX pavyzdžiai.
 
 \end{document}
