Pridėti funkcijos ribos apibrėžimai.

--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 
 % Aibių žymėjimai.
 \newcommand\RSET{\mathop{\mathbb{R}}}
+\newcommand\NSET{\mathop{\mathbb{N}}}
 
 % Apibrėžimai, teiginiai, pastabos.
 \swapnumbers
