--- a/main.tex
+++ b/main.tex
@@ -50,6 +50,7 @@ Matematinės analizės paskaitų konspektas}
 \tableofcontents
 \input{paskaita_01.tex}                 % Įžanginė.
 \input{paskaita_02.tex}                 % Funkcijos riba.
+\input{paskaita_03.tex}                 % Funkcijos riba.
 \input{pvz.tex}                         % Įvairus TeX pavyzdžiai.
 
 \end{document}
