Kelios naujos nesutvarkytos paskaitos. Kai kurių nėra, nes nebuvau.

--- a/pvz.tex
+++ b/pvz.tex
@@ -35,7 +35,7 @@ pavyzdžiai.
   \]
 \end{notation}
 
-Kelios matematinės formulės, išligiuotos ties $=$:
+Kelios matematinės formulės, išlygiuotos ties $=$:
 \begin{align*}
   U(\varepsilon; +\infty) &= (\varepsilon; +\infty) \\
   U(\varepsilon; -\infty) &= (-\infty; -\varepsilon)
