--- a/main.tex
+++ b/main.tex
@@ -52,5 +52,7 @@ Matematinės analizės paskaitų konspektas}
 \input{paskaita_02.tex}                 % Funkcijos riba.
 \input{paskaita_03.tex}                 % Funkcijos riba.
 \input{pvz.tex}                         % Įvairus TeX pavyzdžiai.
+\input{formules.tex}                    % Pagalbinės formulės uždaviniams
+                                        % spręsti.
 
 \end{document}
