Pridėtos pagrindinės trigonometrinės tapatybės.

--- a/formules.tex
+++ b/formules.tex
@@ -35,3 +35,22 @@
 %
 \end{align}
 
+\section{Trigonometrinės tapatybės}
+
+\begin{align}
+%
+  & \sin ^{2} \alpha + \cos ^{2} \alpha = 1
+  \label{f_tri_kvsum} \\
+%
+  & \sin \alpha - \sin \beta = 2 
+    \sin \left( \frac{\alpha - \beta}{2} \right)
+    \cos \left( \frac{\alpha + \beta}{2} \right)
+  \label{f_tri_sinsk} \\
+%
+  & \cos 2 \alpha = \cos ^{2} \alpha - \sin ^{2} \alpha
+  \label{f_tri_dkcos} \\
+%
+  & \sin 2 \alpha = 2 \sin \alpha \cos \alpha
+  \label{f_tri_dksin} 
+%
+\end{align}
