Stiliaus pataisymas. Pridėti skyrių pavadinimai.

--- a/paskaita_02.tex
+++ b/paskaita_02.tex
@@ -1,5 +1,7 @@
 \chapter{Funkcijos riba}
 
+\section{Taško aplinka, aibė, jos taškai}
+
 \begin{notation}
   Funkcija iš realiųjų skaičių aibės $A$ į visų realiųjų skaičių aibę 
   $\RSET$ žymima:
@@ -90,8 +92,12 @@
   \end{center}
 \end{exmp}
 
-Toliau laikome, jog turime funkciją $f : A \to B$ ir kad taškas $a$ 
-yra aibės $A$ ribinis taškas.
+\section{Funkcijos riba}
+
+\begin{note}
+  Toliau laikome, jog turime funkciją $f : A \to B$ ir kad taškas $a$ 
+  yra aibės $A$ ribinis taškas.
+\end{note}
 
 \begin{defn}[Funkcijos riba]
   \label{limfed}
