--- a/formules.tex
+++ b/formules.tex
@@ -12,14 +12,14 @@
   \label{f_lim_exp} \\
 %
   &\lim _{x \to 0} \frac{a^x - 1}{x} = \ln a, 
-  & \text{ kur } a > 0, a \not{=}1
+  & \text{ kur } a > 0, a \neq 1
   \label{f_lim_ep} \\
 % 
   &\lim _{x \to 0} \frac{(1 + x)^r -1}{x} = r, & \text{ kur } r \in \RSET
   \label{f_lim_lp} \\
 %
   &\lim _{x \to 0} \frac{\log _{a} (1 + x)}{x} = \log _{a} e, 
-  & \text{ kur } a > 0, a \not{=} 1
+  & \text{ kur } a > 0, a \neq 1
   \label{f_lim_log} \\
 %
   &\lim _{x \to +\infty} \frac{a^x}{x^r} = +\infty, 
