--- a/main.tex
+++ b/main.tex
@@ -51,6 +51,7 @@ Matematinės analizės paskaitų konspektas}
 \input{paskaita_01.tex}                 % Įžanginė.
 \input{paskaita_02.tex}                 % Funkcijos riba.
 \input{paskaita_03.tex}                 % Funkcijos riba.
+\input{paskaita_04.tex}                 % Funkcijos riba.
 \input{pvz.tex}                         % Įvairus TeX pavyzdžiai.
 \input{formules.tex}                    % Pagalbinės formulės uždaviniams
                                         % spręsti.
