Pridėtas įrodymas, kad (sin x)/x = 1.

--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,10 @@
 \newcommand\RSET{\mathop{\mathbb{R}}}
 \newcommand\NSET{\mathop{\mathbb{N}}}
 
+% tg, ctg
+\newcommand\tg{\mathop{\text{tg}}}
+\newcommand\ctg{\mathop{\text{ctg}}}
+
 % Apibrėžimai, teiginiai, pastabos.
 \swapnumbers
 
