Įkeltas skyrius apie funkcijų tolydumą.

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper]{report}
 
 \usepackage{fontspec}
+\usepackage{amssymb}
 \usepackage{xltxtra}
 \usepackage[lithuanian]{babel}
 \usepackage{indentfirst}
@@ -19,9 +20,10 @@
 \newcommand\RSET{\mathop{\mathbb{R}}}
 \newcommand\NSET{\mathop{\mathbb{N}}}
 
-% tg, ctg
+% tg, ctg, sign
 \newcommand\tg{\mathop{\text{tg}}}
 \newcommand\ctg{\mathop{\text{ctg}}}
+\newcommand\sign{\mathop{\text{sign}}}
 
 % Apibrėžimai, teiginiai, pastabos.
 \swapnumbers
