Pridėtos Vejerštraso, Bolcano-Koši, intervalo atvaizdavimo teoremos bei asimptotinis funkcijų įvertinimas.

--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \usepackage[]{amsmath}
 \usepackage{amsthm}
 \usepackage{amsfonts}
+\usepackage{mathtools}
 \usepackage{alltt}
 %\usepackage{listingsutf8}
 
@@ -59,6 +60,7 @@ Matematinės analizės paskaitų konspektas}
 \input{paskaita_03.tex}                 % Funkcijos riba.
 \input{paskaita_04.tex}                 % Funkcijos riba.
 \input{paskaita_05.tex}                 % Funkcijos riba.
+\input{paskaita_06.tex}                 % Funkcijos riba.
 \input{pvz.tex}                         % Įvairus TeX pavyzdžiai.
 \input{formules.tex}                    % Pagalbinės formulės uždaviniams
                                         % spręsti.
