Pridėtas viršutinės ribos skaičiavimo pavyzdys.

--- a/paskaita_04.tex
+++ b/paskaita_04.tex
@@ -101,6 +101,7 @@
 \section{Ribų skaičiavimo pavyzdžiai}
 
 \begin{exmp}
+  \label{lim_sinx_x}
   Įrodysime, kad:
   \begin{equation*}
     \lim _{x \to 0} \frac{\sin x}{x} = 1
