Pridėtas išvestinės apibrėžimas, bei jų savybės.

--- a/main.tex
+++ b/main.tex
@@ -61,6 +61,7 @@ Matematinės analizės paskaitų konspektas}
 \input{paskaita_04.tex}                 % Funkcijos riba.
 \input{paskaita_05.tex}                 % Funkcijos riba.
 \input{paskaita_06.tex}                 % Funkcijos riba.
+\input{paskaita_07.tex}                 % Funkcijos riba.
 \input{pvz.tex}                         % Įvairus TeX pavyzdžiai.
 \input{formules.tex}                    % Pagalbinės formulės uždaviniams
                                         % spręsti.
