Pridėtos elementariųjų funkcijų išvestinių formulės.

--- a/formules.tex
+++ b/formules.tex
@@ -54,3 +54,64 @@
   \label{f_tri_dksin} 
 %
 \end{align}
+
+\section{Elementarių funkcijų išvestinės}
+
+\label{dx_formulynas}
+
+\begin{align}
+%
+  (x^{\alpha})' &= \alpha x^{\alpha - 1}
+  \label{dx_laipsnine} \\
+%
+  (\sin x)' &= \cos x
+  \label{dx_sin} \\
+%
+  (\cos x)' &= - \sin x
+  \label{dx_cos} \\
+%
+  (\tg x)' &= \frac{1}{\cos^{2} x}
+  \label{dx_tg} \\
+%
+  (\ctg x)' &= \frac{1}{\sin^{2} x}
+  \label{dx_ctg} \\
+%
+  (\arcsin x)' &= \frac{1}{\sqrt{1 - x^{2}}}
+  \label{dx_arcsin} \\
+%
+  (\arccos x)' &= - \frac{1}{\sqrt{1 - x^{2}}}
+  \label{dx_arccos} \\
+%
+  (\arctg x)' &= \frac{1}{1 + x^{2}}
+  \label{dx_arctg} \\
+%
+  (\arcctg x)' &= - \frac{1}{1 + x^{2}}
+  \label{dx_arcctg} \\
+%
+  (a^{x})' &= a^{x} \cdot \ln a
+  \label{dx_expo} \\
+%
+  (\log _{a} x)' &= \frac{1}{x \cdot \ln a}
+  \label{dx_log} \\
+%
+  (\sinh x)' &= \cosh x
+  \label{dx_sh} \\
+%
+  (\cosh x)' &= \sinh x
+  \label{dx_ch} \\
+% 
+  (\tanh x)' &= \frac{1}{\cosh^{2} x}
+  \label{dx_th} \\
+%
+  (\coth x)' &= \frac{1}{\sinh^{2} x}
+  \label{dx_cth}
+\end{align}
+
+\begin{note}
+  \begin{align*}
+    \sinh x &:= \frac{e^{x} - e^{-x}}{2} \\
+    \cosh x &:= \frac{e^{x} + e^{-x}}{2} \\
+    \tanh x &:= \frac{\sinh x}{\cosh x} \\
+    \coth x &:= \frac{\cosh x}{\sinh x}
+  \end{align*}
+\end{note}
