--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,9 @@
 \newcommand\RSET{\mathop{\mathbb{R}}}
 \newcommand\NSET{\mathop{\mathbb{N}}}
 
-% tg, ctg, sign
+% arctg, arcctg, tg, ctg, sign
+\newcommand\arctg{\mathop{\text{arctg}}}
+\newcommand\arcctg{\mathop{\text{arcctg}}}
 \newcommand\tg{\mathop{\text{tg}}}
 \newcommand\ctg{\mathop{\text{ctg}}}
 \newcommand\sign{\mathop{\text{sign}}}
