--- a/paskaita_07.tex
+++ b/paskaita_07.tex
@@ -250,7 +250,11 @@ diferencijuojama.
 
   Taigi
   \begin{equation*}
-    \sin x^{2} = 2x \cos x^{2}
+    (\sin x^{2})' = 2x \cos x^{2}
   \end{equation*}
 
 \end{exmp}
+
+\section{Elementariųjų funkcijų išvestinės}
+
+Sąrašą žr. \ref{dx_formulynas}.
